Make tmux terminal behaviour easier
Add the xterm-keys to move between words on the command line.

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,3 +13,7 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+# Use C-Left C-Right to move between words
+set-window-option -g xterm-keys on
+
