Add vim-powerline compatibility
Change the terminal behaviour so that vim-powerline can correctly show
its colors.

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,3 +17,5 @@ bind-key l select-pane -R
 # Use C-Left C-Right to move between words
 set-window-option -g xterm-keys on
 
+# Make vim Powerline beautiful again
+set -g default-terminal "screen-256color"
