Update tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,3 +13,6 @@ set-window-option -g xterm-keys on
 
 # Make vim Powerline beautiful again
 set -g default-terminal "screen-256color"
+
+# Do not delay ESC for so long (neovim/neovim#2035)
+set -sg escape-time 20
