Do not truncate long tmux session names

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,3 +16,6 @@ set -g default-terminal "screen-256color"
 
 # Do not delay ESC for so long (neovim/neovim#2035)
 set -sg escape-time 20
+
+# Allow long session names
+set -g status-left-length 40
