Start tmux panes with current working directory
When splitting a new pane, start in the working directory of the active
(parent) pane. New windows still start in the working directory of the
tmux session.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# Start new panes in working directory of active pane
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+
 # Use C-Left C-Right to move between words
 set-window-option -g xterm-keys on
 
