tmux.conf: Add compatibility keybind for prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # Rebind leader to C-q (not used in vim)
-set -g prefix C-q
+set-option -g prefix C-q
+set-option -g prefix2 C-b
 bind-key q send-prefix # for nested tmux sessions
 
 # use the vim motion keys to move between panes
