tmux.conf: Add keybind for sychronizing panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,5 +22,8 @@ set -g default-terminal "screen-256color"
 # Do not delay ESC for so long (neovim/neovim#2035)
 set -sg escape-time 20
 
+# Synchronize panes!
+bind-key e setw synchronize-panes
+
 # Allow long session names
 set -g status-left-length 40
